# inckmeans

./: .gitignore  CMakeLists.txt  README.md
include/: .kmeans.h.swp  csv_reader.h  eval.h  kmeans.h  kmeans_cfg.h  preproc.h
plot/: plot_output.py  plot_time.py
src/: .kmeans.c.swp  .main.c.swp  Makefile  csv_reader.c  eval.c  kmeans.c  kmeans.h  kmeans_cfg.h  main.c  preproc.c
