cmake_minimum_required(VERSION 3.10)
project(ikmeans_test)
set(CMAKE_BUILD_TYPE Debug)
#find_package (Eigen3 3.3 REQUIRED NO_MODULE)
#add_library(Eigen SHARED IMPORTED)
include_directories(include)
file(GLOB SOURCES src/*.c)
add_executable(ikmeans_test ${SOURCES})
target_link_libraries(ikmeans_test m gsl gslcblas)
